--- a/Jupyter Notebook - Offline version of the solution.ipynb
+++ b/Jupyter Notebook - Offline version of the solution.ipynb
@@ -19,15 +19,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# SVU - ITE - F22 - AML601\n",
-        "Dr. Bassel Alkhatib\n",
-        "\n",
-        "Participants:\n",
-        " - mhd_hussam_109817\n",
-        " - hassan_125191\n",
-        " - hebatullah_153525\n",
-        "\n",
-        "\n",
         " # Classification on the Breast Cancer Wisconsin dataset using Python's Sklearn library.\n",
         "\n",
         "\n",
@@ -71,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,7 +143,7 @@
         "id": "405Ke82DjRGK",
         "outputId": "7bce767c-b544-47d2-c718-75d64b7ba94f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +541,7 @@
         "id": "cHQd7gLry24q",
         "outputId": "cc1fd92b-df59-4c54-df26-b22528bb089c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +594,7 @@
         "id": "wi0tsQnBRd1Y",
         "outputId": "ba68afa6-e4f4-458d-a78b-fecd80c736ef"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +663,7 @@
         "id": "Iww5-iB8kbQa",
         "outputId": "1ae37405-1259-43e9-85f6-fd20a57c43df"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +689,7 @@
         "id": "OLzYWWWy46eR",
         "outputId": "04e00305-a4f9-4bd7-d699-1585febb1b3e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -737,7 +728,7 @@
         "id": "NFdbTWu_kRI1",
         "outputId": "8ce15ec1-8893-4878-9046-c8ea98bffe58"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +881,7 @@
         "id": "iuxzKOSI9rsg",
         "outputId": "8e25bb5d-9751-4289-b161-dd74c4e016b5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1004,7 +995,7 @@
         "id": "nQb6WKS9ATCz",
         "outputId": "27157bfa-46c4-49b7-ac28-f130ce57d57e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1067,7 +1058,7 @@
         "id": "HA09NEScAlsF",
         "outputId": "b73dfe34-0565-45a1-ae57-33aff1cff973"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1124,7 +1115,7 @@
         "id": "NWtOA6PHA7eF",
         "outputId": "bd44bada-aad7-440d-d21b-d1b9223abc44"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1165,7 +1156,7 @@
         "id": "S7hDpWyMBlJg",
         "outputId": "882f86d8-c2d4-46a9-a89b-b6dc20e9e4fd"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1182,8 +1173,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4. Classification <a name=\"classify\"></a>\n",
-        ""
+        "# 4. Classification <a name=\"classify\"></a>\n"
       ],
       "metadata": {
         "id": "aQUknQyLm8KV"
@@ -1217,7 +1207,7 @@
       "metadata": {
         "id": "ktO8FykyDsz4"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,7 +1230,7 @@
       "metadata": {
         "id": "0OVmtOn7QJH9"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1269,7 @@
       "metadata": {
         "id": "hGoIRdh5FOwr"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1317,7 +1307,7 @@
       "metadata": {
         "id": "uLiBY3vvFVmC"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1352,7 +1342,7 @@
         "id": "T05iOSbSr6dl",
         "outputId": "9f130b79-38e9-4620-b0b2-937b27ab99eb"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1454,7 +1444,7 @@
       "metadata": {
         "id": "ZE2kzT8yGMny"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1492,7 +1482,7 @@
       "metadata": {
         "id": "of0gBPHUGPXJ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1530,7 +1520,7 @@
       "metadata": {
         "id": "iAmHxi9qGQ_p"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1566,7 +1556,7 @@
         "id": "Zp-p8RD2Qm5l",
         "outputId": "bcd004a5-af13-465c-f481-3da720ef8ef6"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1780,7 +1770,7 @@
         "id": "M4wdbwyoUacB",
         "outputId": "02a7a950-53da-406d-8ccf-bf5ff5106bb2"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1820,7 +1810,7 @@
         "id": "p8MRZQ5gZ1OO",
         "outputId": "ff5be9ba-d036-4a60-a3b7-f0b61dd0b2db"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1856,7 @@
         "id": "4IWznK1ba0rO",
         "outputId": "c013cfbe-3a95-48be-f4ef-bf5472b89580"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1911,7 +1901,7 @@
         "id": "RkP_Dic0Zlp-",
         "outputId": "9376b4a8-a4da-4f53-e216-b73a6cdec5b9"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,7 +1950,7 @@
         "id": "88AZ6mZScSli",
         "outputId": "90dc6ef2-2773-4afe-89a9-0a541bf72e7a"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1994,7 +1984,7 @@
         "id": "3ByNfbjTcn1S",
         "outputId": "205355ff-715d-494f-eaf3-069c7d6a3573"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2161,8 +2151,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 8. Feature Selection <a name=\"feature\"></a>\n",
-        ""
+        "# 8. Feature Selection <a name=\"feature\"></a>\n"
       ],
       "metadata": {
         "id": "KH6Jfe-jEeZZ"
@@ -2197,7 +2186,7 @@
         "id": "-dwC2-rqmqBi",
         "outputId": "182e3400-515c-4faf-f61d-4e3994c658b2"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2215,8 +2204,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 8. Model Comparison <a name=\"compare\"></a>\n",
-        ""
+        "# 8. Model Comparison <a name=\"compare\"></a>\n"
       ],
       "metadata": {
         "id": "mMmH704WDObO"
@@ -2247,7 +2235,7 @@
         },
         "outputId": "89887766-04b1-4142-8365-bace23e623aa"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2503,7 +2491,7 @@
         "id": "KgKE6Kn2lZzK",
         "outputId": "c2e7263a-c399-4757-8dfa-94be0fcea57e"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
